@@ -1,3 +1,15 @@
+2012-01-18  Andrey Kosyakov  <caseq@chromium.org>
+
+        Web Inspector: resource tree model leaks frames
+        https://bugs.webkit.org/show_bug.cgi?id=76533
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/ResourceTreeModel.js:
+        (WebInspector.ResourceTreeModel.prototype._frameDetached):
+        (WebInspector.ResourceTreeModel.prototype._removeFrame):
+        (WebInspector.ResourceTreeFrame.prototype._removeChildFrame):
+
 2012-01-17  Vsevolod Vlasov  <vsevik@chromium.org>
 
         Web Inspector: Enable support for Open Script dialog based on FilteredItemSelectionDialog.
